--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+    <form class="input-group" action="/add" method="post">
+        {{ form.hidden_tag() }}
+        {{ form.content(class="form-control") }}
+        <span class="input-group-btn">
+            <button class="btn btn-default" type="submit">Add</button>
+        </span>
+    </form>
+    {% for error in form.errors.content %}
+        <div>{{ error }}</div>
+    {%  endfor %}
 
-Hello world
+    <div>
+        <h2>Todo List</h2>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>content</th>
+                        <th>status</th>
+                        <th>time</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for todo in todos %}
+                        <tr>
+                            <td>{{ todo.content }}</td>
+                            <td>
+                                {% if todo.status == 1 %}
+                                    已完成
+                                {% else %}
+                                    未完成
+                                {% endif %}
+                            </td>
+                            <td>{{ todo.time }}</td>
+                        </tr>
+                    {%  endfor %}
+                </tbody>
+            </table>
+    </div>
 
-</body>
-</html>
+{% endblock %}
