--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
                                     未完成
                                 {% endif %}
                             </td>
-                            <td>{{ todo.time }}</td>
+                            <td>{{ todo.time.strftime('%Y-%m-%d %H:%M:%S') }}</td>
                             {% if todo.status == 1 %}
                                 <td><a href="/undone/{{ todo.id }}" class="btn btn-primary">Undone</a></td>
                             {% else %}
